--- a/src/index.css
+++ b/src/index.css
@@ -27,14 +27,14 @@
 
 :root {
   /* Colours */
-  --color-Red: hsl(14, 86, 42);
-  --color-Rose900: hsl(14, 65, 9);
-  --color-Rose500: hsl(12, 20, 44);
-  --color-Rose400: hsl(7, 20, 60);
-  --color-Rose300: hsl(14, 25, 72);
-  --color-Rose300: hsl(13, 31, 94);
-  --color-Rose50: hsl(20, 50, 98);
-  --color-Green: hsl(159, 69, 38);
+  --color-Red: hsl(14, 86%, 42%);
+  --color-Rose900: hsl(14, 65%, 9%);
+  --color-Rose500: hsl(12, 20%, 44%);
+  --color-Rose400: hsl(7, 20%, 60%);
+  --color-Rose300: hsl(14, 25%, 72%);
+  --color-Rose300: hsl(13, 31%, 94%);
+  --color-Rose50: hsl(20, 50%, 98%);
+  --color-Green: hsl(159, 69%, 38%);
 }
 /* Typography */
 .text-preset1,
@@ -71,3 +71,4 @@ h1 {
 body {
   font-family: "Red Hat Text", sans-serif;
 }
+
