--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ h1 {
   font-size: 2.5rem;
   line-height: 120%;
   letter-spacing: 0px;
+  font-weight: bold;
 }
 .text-preset2 {
   font-size: 1.5rem;
@@ -68,7 +69,14 @@ h1 {
   font-weight: 600;
 }
 
+.inc-dec-borders {
+  border: 1px solid white;
+  border-radius: 100%;
+  width: 20px;
+  height: 20px; 
+  padding-inline: 3px;
+}
+
 body {
   font-family: "Red Hat Text", sans-serif;
 }
-
